<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>AnatomyExplorer</groupId>
  <artifactId>AnatomyExplorer</artifactId>
  <version>1</version>
  <packaging>jar</packaging>
  <name>AnatomyExplorer</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.9.2</junit.version>
    <javafx.version>24</javafx.version>
    <javafx.platform>win</javafx.platform>
    <main.class>Project.Launch</main.class>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier> <!--only platform specific jars-->
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>${javafx.version}</version>
      <classifier>${javafx.platform}</classifier>
    </dependency>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.1.2</version>
    </dependency><dependency>
    <groupId>com.dlsc.formsfx</groupId>
    <artifactId>formsfx-core</artifactId>
    <version>11.6.0</version>
    <exclusions>
      <exclusion>
        <groupId>org.openjfx</groupId>
        <artifactId>*</artifactId>
      </exclusion>
    </exclusions>
  </dependency>
    <dependency>
      <groupId>com.github.almasb</groupId>
      <artifactId>fxgl</artifactId>
      <version>11.17</version>
      <exclusions>
        <exclusion>
          <groupId>org.openjfx</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.0</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>24.0.0</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/com.dlsc.pdfviewfx/pdfviewfx -->
    <dependency>
      <groupId>com.dlsc.pdfviewfx</groupId>
      <artifactId>pdfviewfx</artifactId>
      <version>3.4.2</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>24</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>${main.class}</mainClass>
              <addClasspath>true</addClasspath> <!--  VERY IMPORTANT. Otherwise all the dependencies will be in lib/ but
                                                      the .jar will not know about them and not be able to use them! -> ClassNotFoundDefError-->
              <classpathPrefix>lib/</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <!-- copy runtime dependencies to target/lib -->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <id>anatomyExplorer</id>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <options>
                <option>-Xmx4g</option>  <!-- use up to 4G RAM-->
              </options>
              <mainClass>Project.AnatomyExplorer</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.3.0</version>

        <executions>
          <execution>
            <id>jpackage</id>
            <phase>package</phase>
            <goals>
              <goal>exec</goal>
            </goals>

            <configuration>
              <executable>${java.home}/bin/jpackage</executable>

              <arguments>

                <argument>--type</argument>
                <argument>msi</argument>

                <argument>--name</argument>
                <argument>AnatomyExplorer</argument>

                <argument>--input</argument>
                <argument>${project.build.directory}</argument>

                <argument>--dest</argument>
                <argument>${project.build.directory}/dist</argument>

                <argument>--main-jar</argument>
                <argument>${project.build.finalName}.jar</argument>

                <argument>--java-options</argument>
                <argument>-Xmx4g</argument>

                <!-- optional but useful -->
                <argument>--win-shortcut</argument>
                <argument>--win-menu</argument>

                <argument>--win-console</argument>

                <argument>--java-options</argument>
                <argument>-Dprism.verbose=true</argument>

                <argument>--java-options</argument>
                <argument>-XshowSettings:properties</argument>

                <argument>--java-options</argument>
                <argument>--enable-native-access=javafx.graphics</argument>

              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>